jquery.js conflict prototype.js create =>  layouts/editorial_edit.erb

--- a/app/views/assos/_form.html.erb
+++ b/app/views/assos/_form.html.erb
@@ -4,7 +4,7 @@
 
 
 <p style="display:none2;">  NON USARE f.codice sostiuito da id ==> 
-  <%=h (f.object.codice) %></p>
+  <%=h (f.object.id) %></p>
 </p>
   
   <p><%= f.text_field :ragione_sociale, :label => :field_ragione_sociale, :required => true, :size => 40 %></p>
