--- a/app/views/layouts/base.html.erb
+++ b/app/views/layouts/base.html.erb
@@ -20,6 +20,7 @@
 <%= call_hook :view_layouts_base_html_head %>
 <!-- page specific tags -->
 <%= yield :header_tags -%>
+  <!-- end page specific tags -->
 </head>
 <body class="<%=h body_css_classes %>">
 <div id="wrapper">
