--- a/app/views/layouts/editorial.html.erb
+++ b/app/views/layouts/editorial.html.erb
@@ -26,24 +26,28 @@
   <%= stylesheet_link_tag 'style.responsive.css', :media => 'all' %>
   <%= stylesheet_link_tag 'style.css', :media => 'all' %>
   <%= stylesheet_link_tag 'style.plus.css', :media => 'all' %>
+
+  <%#= javascript_heads %>
   <%# javascript_include_tag "jquery/jquery-1.8.2.min.js"%>
-  <%=javascript_include_tag "jquery.js"%>
+
+  <%= javascript_include_tag "jquery.js"%>
+
   <%#= javascript_include_tag "jquery/jquery-1.7.1.min.js" %>
-  <%#= javascript_include_tag "jquery/jquery-1.8.0.min.js" %>
+  <%# javascript_include_tag "jquery/jquery-1.9.1.min.js" %>
   <%# javascript_include_tag "jquery/jquery-ui-1.8.23.custom.min.js" %>
   <%#stylesheet_link_tag 'jquery/redmond/jquery-ui-1.8.23.custom.css', :media => 'all' %>
   <%#javascript_include_tag "src/jquery-1.3.2.js" %>
   <%= javascript_include_tag "src/jquery.color.js" %>
-  <%=javascript_include_tag "src/jquery-glowing.js" %>
-  <%=javascript_include_tag "src/text_ticker.js" %>
+  <%= javascript_include_tag "src/jquery-glowing.js" %>
+  <%= javascript_include_tag "src/text_ticker.js" %>
   <%= javascript_include_tag "dynamic-font-resize.js" %>
+
   <%= javascript_include_tag "jquery/jquery-ui-1.9.2.custom.min.js" %>
   <%= stylesheet_link_tag 'jquery/start/jquery-ui-1.9.2.custom.min.css', :media => 'all' %>
   <%= stylesheet_link_tag 'jquery-ui-rewrite.css', :media => 'all' %>
   <%= javascript_include_tag "script.js" %>
   <%= javascript_include_tag "script.responsive.js" %>
   <%= javascript_include_tag "jquery.carouFredSel-6.1.0.js" %>
-
   <script type="text/javascript">
       //$(function () {
       $(document).ready(function() {
@@ -97,6 +101,9 @@
       });
 
   </script>
+  <!-- page specific tags -->
+  <%= yield :header_tags -%>
+    <!-- end page specific tags -->
 
 </head>
 <body>
