--- a/app/views/layouts/editorial_edit.html.erb
+++ b/app/views/layouts/editorial_edit.html.erb
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html dir="ltr" lang="en-EN" xmlns="http://www.w3.org/1999/html">
 <head><!-- Created by DomThu & SPecchiaSoft -->
-   <meta charset="utf-8"/>
-  <title>FiscoSport (v0.0.9) <%= h html_title %></title>
+     <meta charset="utf-8"/>
+    <title>FiscoSport (v0.0.9) <%= h html_title %></title>
   <meta name="viewport" content="initial-scale = 1.0, maximum-scale = 1.0, user-scalable = no, width = device-width"/>
   <meta name="description" content="<%= Redmine::Info.app_name %>"/>
   <meta name="keywords" content="editoriale, notizie sport, fiscale, info, fiscosport"/>
@@ -26,89 +26,32 @@
   <%= stylesheet_link_tag 'style.responsive.css', :media => 'all' %>
   <%= stylesheet_link_tag 'style.css', :media => 'all' %>
   <%= stylesheet_link_tag 'style.plus.css', :media => 'all' %>
-
-  <%#= javascript_heads %>
   <%# javascript_include_tag "jquery/jquery-1.8.2.min.js"%>
 
-  <%= javascript_include_tag "jquery.js"%>
-
   <%#= javascript_include_tag "jquery/jquery-1.7.1.min.js" %>
-  <%# javascript_include_tag "jquery/jquery-1.9.1.min.js" %>
+  <%#= javascript_include_tag "jquery/jquery-1.8.0.min.js" %>
   <%# javascript_include_tag "jquery/jquery-ui-1.8.23.custom.min.js" %>
   <%#stylesheet_link_tag 'jquery/redmond/jquery-ui-1.8.23.custom.css', :media => 'all' %>
   <%#javascript_include_tag "src/jquery-1.3.2.js" %>
-  <%= javascript_include_tag "src/jquery.color.js" %>
-  <%= javascript_include_tag "src/jquery-glowing.js" %>
-  <%= javascript_include_tag "src/text_ticker.js" %>
-  <%= javascript_include_tag "dynamic-font-resize.js" %>
-
+  <%#javascript_include_tag "prototype.js"%>
+  <%# javascript_include_tag "src/jquery.color.js" %>
+  <%#javascript_include_tag "src/jquery-glowing.js" %>
+  <%#javascript_include_tag "src/text_ticker.js" %>
+  <%# javascript_include_tag "dynamic-font-resize.js" %>
   <%= javascript_include_tag "jquery/jquery-ui-1.9.2.custom.min.js" %>
   <%= stylesheet_link_tag 'jquery/start/jquery-ui-1.9.2.custom.min.css', :media => 'all' %>
   <%= stylesheet_link_tag 'jquery-ui-rewrite.css', :media => 'all' %>
   <%= javascript_include_tag "script.js" %>
   <%= javascript_include_tag "script.responsive.js" %>
-  <%= javascript_include_tag "jquery.carouFredSel-6.1.0.js" %>
-  <script type="text/javascript">
-      //$(function () {
-      $(document).ready(function() {
-          'use strict';
-          if ($.fn.slider) {
-              $(".fs-slidecontainerslideshutterstock_1").each(function () {
-                  var slideContainer = $(this), tmp;
-                  var inner = $(".fs-slider-inner", slideContainer);
-                  var helper = null;
-                  inner.children().eq(0).addClass("active");
-                  slideContainer.slider({
-                      pause:2600,
-                      speed:600,
-                      repeat:true,
-                      animation:"fade",
-                      direction:"next",
-                      navigator:slideContainer.siblings(".fs-slidenavigatorslideshutterstock_1"),
-                      helper:helper
-                  });
-              });
-          };
-
-          $("#carousel_assos_js").carouFredSel({
-              items				: 3,
-              scroll : {
-                  items			: 3,
-                  easing			: "elastic",
-                  duration		: 2000,
-                  pauseOnHover	: true
-              }
-          });
-          // $("input[type=submit]").button();
-
-          //Focus
-          //< %= javascript_tag "$('#username').focus();" %>
-          $('#username').focus();
-      });
-  </script>
-  <script type="text/javascript" charset="utf-8">
-      $(document).ready(function() {
-          $('.x-white').addGlow({ textColor: 'white', haloColor: '#aaa', radius: 100 });
-          $('.x-blue').addGlow({ textColor: '#00f', haloColor: '#00f', radius: 100 });
-          $('.x-yellow').addGlow({ textColor: '#F8DA00', haloColor: '#F8DA00', radius: 100 });
-          $('.x-red').addGlow({ textColor: '#f00', haloColor: '#f00', radius: 100 });
-          $('.x-granata').addGlow({ textColor: '#a03823', haloColor: '#a03823', radius: 100 });
-          $('*').bind('glow:started', console.info);
-          $('*').bind('glow:canceled', console.info);
-          // effetto sul testo di fade o slide
-          $('#fade').list_ticker({speed:3000,effect:'fade'})
-
-      });
-
-  </script>
+  <%# javascript_include_tag "jquery.carouFredSel-6.1.0.js" %>
   <!-- page specific tags -->
+  <%= javascript_heads %>
   <%= yield :header_tags -%>
     <!-- end page specific tags -->
-
 </head>
 <body>
 <div id="fs-main">
-  <div id="fs-header-bg" class="clearfix">
+  <div id="fs-header-bg" class="clearfix" style="margin-top: 30px;;">
   </div>
   <div class="fs-sheet clearfix">
     <header class="fs-header clearfix">
@@ -124,7 +67,7 @@
       <div class="fs-textblock fs-object375974515" data-left="80%">
         <% form_tag({:controller => 'editorial', :action => 'ricerca'}, :method => :get, :class => "fs-search") do %>
             <%= text_field_tag 'q', @question, :accesskey => accesskey(:quick_search) %>
-            <input type="submit" value="ricerca" class="fs-search-button"/>
+            <input type="submit" value="xricerca" class="fs-search-button"/>
         <% end %>
       </div>
 
@@ -134,7 +77,7 @@
       <%= render_navigation(:level => 1) %>
     </nav>
     <div id="fs-tramenu-wrapper">
-      <%= render :partial => 'tramenu_block' %>
+      <%= render :partial => 'tramenu_block_edit' %>
 
     </div>
     <nav class="fs-menu2-nav clearfix">
