--- a/app/views/editorial/profilo_new.html.erb
+++ b/app/views/editorial/profilo_new.html.erb
@@ -15,13 +15,17 @@
 <% end %>
 -->
 
-<% form_for @u_profile, :url => {:action => "profilo_new"} do |f| %>
+<% form_for @u_profile, :url => {:action => "profilo_new"} ,:html => { :multipart => true } do |f| %>
     <%= f.error_messages %>
     <%= f.hidden_field :user_id, :value => params[:uid] %>
 
     <h2><%= params[:uid] %> </h2>
 
     <div class="fs-profiles-sx">
+      <p>
+        <%= f.label :photo %>
+        <%= f.file_field :photo %>
+      </p>
       <p>
         <%= f.label :immagine_url %><br/>
         <%= f.text_field :immagine_url %>
