--- a/app/views/editorial/profilo_new.html.erb
+++ b/app/views/editorial/profilo_new.html.erb
@@ -1,26 +1,6 @@
-<h1>New user_profile</h1>
 
-<!--
-<% form_tag({:controller => "editorial", :action => "profilo_create", :method => "post"}, :class => "input", :id => "fs-quesito-new") do %>
-    <div id="fs-form-profiles-img">
-      <label>Immagine </label>
-      <span>  <%= text_field 'quesito', 'summary', :rows => 2, :cols => 25, :tabindex => '1' %>  </span>
-    </div>
-    <div>
-      <label>Quesito </label>
-      <span>  <%= text_area 'quesito', 'description', :rows => 10, :cols => 25, :tabindex => '2' %>  </span>
-    </div>
-    <div id="fs-form-quesito-new-btn">
-      <%= submit_tag 'Invia', :class => "fs-giallo-button", :confirm => 'Confermi?' %>   </div>
-<% end %>
--->
-
-<% form_for @u_profile, :url => {:action => "profilo_new"} ,:html => { :multipart => true } do |f| %>
-    <%= f.error_messages %>
-    <%= f.hidden_field :user_id, :value => params[:uid] %>
-
-    <h2><%= params[:uid] %> </h2>
-
+<% form_for :user_profile, @user_profile, :url => {:controller=> 'user_profiles', :action => "create_profile"} ,:html => { :multipart => true } do |f| %>
+         <%= f.hidden_field :user_id, :value => params[:uid] %>
     <div class="fs-profiles-sx">
       <p>
         <%= f.label :photo %>
