--- a/app/views/editorial/profili_all.html.erb
+++ b/app/views/editorial/profili_all.html.erb
@@ -9,6 +9,9 @@
       <div class="fs-layout-cell post-layout-item-3" style="width: 50%">
         <article class="fs-post-profile fs-article">
           <h3 class="fs-postheader">DIRETTORI DI REDAZIONE </h3>
+
+          <h2><%= @u1.to_s %></h2>
+          <h3><%= @u2.to_s %></h3>
           <% @direttori.each do |item| %>
               <div class="fs-chisiamo-item">
                 <%= link_to image_tag("/images/commons/m1.png", :alt => item.user.firstname + ' ' + item.user.lastname, :height => "75", :class => "fs-lightbox"), :controller => "editorial", :action => "profilo_show", :id => item.id %>
@@ -22,6 +25,8 @@
       <div class="fs-layout-cell post-layout-item-3" style="width: 50%">
         <article class="fs-post-profile fs-article">
           <h3 class="fs-postheader">RESPONSABILI DI REDAZIONE </h3>
+
+
           <% @responsabili.each do |item| %>
               <div class="fs-chisiamo-item">
                 <%= link_to image_tag("/images/commons/m1.png", :alt => item.user.firstname + ' ' + item.user.lastname, :height => "75", :class => "fs-lightbox"), :controller => "editorial", :action => "profilo_show", :id => item.id %>
@@ -35,33 +40,34 @@
     </div>
   </div>
   <div class="fs-content-layout post-layout-item-0" style="width: 99%">
-    <div class="fs-content-layout-row">
-      <div class="fs-layout-cell post-layout-item-3">
-        <article class="fs-post-profile fs-article">
-          <h3 class="fs-postheader">COLLABORATORI DELLA REDAZIONE </h3>
-          <% @collaboratori.each do |item| %>
-              <div class="fs-chisiamo-item2">
-                <%= link_to image_tag("/images/commons/m2.png", :alt => item.user.firstname + ' ' + item.user.lastname, :height => "80", :class => "fs-lightbox"), :controller => "editorial", :action => "profilo_show", :id => item.id %>
-                <p>
-                  <span style="font-weight: bold;">  <%= link_to((item.user.firstname + ' ' + item.user.lastname), :controller => "editorial", :action => "profilo_show", :id => item.id) %></span><br/>
-                  <span style="font-style: italic;">  <%= item.fs_qualifica %> </span></p>
-              </div>
-          <% end %>
-          <% @users.each do |item| %>
-              <div class="fs-chisiamo-item2">
-                <%= link_to image_tag("/images/commons/m1.png", :alt => item.firstname + ' ' + item.lastname, :height => "80", :class => "fs-lightbox"), :controller => "editorial", :action => "profilo_new", :id => item.id %>
-                <p>
-                  <span style="font-weight: bold;">  <%= link_to((item.firstname + ' ' + item.lastname), :controller => "editorial", :action => "profilo_new", :id => item.id) %></span><br/>
-                  <span style="font-style: italic;">[ <%= item.id.to_s %> <%= item.role_id == 4 ? 'Collaboratore':'Admin' %> ]</span></p>
-              </div>
-          <% end %>
-          <div class="clearfix"></div>
-        </article>
+      <div class="fs-content-layout-row">
+        <div class="fs-layout-cell post-layout-item-3">
+          <article class="fs-post-profile fs-article">
+            <h3 class="fs-postheader">COLLABORATORI DELLA REDAZIONE </h3>
+            <% @collaboratori.each do |item| %>
+                <div class="fs-chisiamo-item2">
+                  <%= link_to image_tag("/images/commons/m2.png", :alt => item.user.firstname + ' ' + item.user.lastname, :height => "80", :class => "fs-lightbox"), :controller => "editorial", :action => "profilo_show", :id => item.id %>
+                  <p>
+                    <span style="font-weight: bold;">  <%= link_to((item.user.firstname + ' ' + item.user.lastname), :controller => "editorial", :action => "profilo_show", :id => item.id) %></span><br/>
+                    <span style="font-style: italic;">  <%= item.fs_qualifica %> </span></p>
+                </div>
+            <% end %>
+            <% @users.each do |item| %>
+                <div class="fs-chisiamo-item2">
+                  <%= link_to image_tag("/images/commons/m1.png", :alt => item.firstname + ' ' + item.lastname, :height => "80", :class => "fs-lightbox"), :controller => "editorial", :action => "profilo_new", :id => item.id %>
+                  <p>
+                    <span style="font-weight: bold;">  <%= link_to((item.firstname + ' ' + item.lastname), :controller => "editorial", :action => "profilo_new", :id => item.id) %></span><br/>
+                    <span style="font-style: italic;">[ <%= item.id.to_s %> <%= item.role_id == 4 ? 'Collaboratore' :'Admin' %>
+                      ]</span></p>
+                </div>
+            <% end %>
+            <div class="clearfix"></div>
+          </article>
+        </div>
       </div>
-    </div>
+   </div>
   </div>
-</div>
 
 
-<%= render :partial => 'blocco_sidebar1' %>
+  <%= render :partial => 'blocco_sidebar1' %>
 
