--- a/public/stylesheets/application.css
+++ b/public/stylesheets/application.css
@@ -1104,3 +1104,4 @@ h2 img { vertical-align:middle; }
 .fs-quesiti-status-5 {
     background-position: 0 -300px;
 }
+.total{font-weight: bold;color: ##2C4056; background-color:#FFFFDD; padding: 5px;}
