--- a/app/views/reservations/new.html.erb
+++ b/app/views/reservations/new.html.erb
@@ -1,31 +1,9 @@
-<h1>New reservation</h1>
+<h2><%= link_to l(:label_reservation_plural), reservations_path %> &#187; <%= l(:label_reservation_new) %></h2>
 
-<% form_for(@reservation) do |f| %>
-  <%= f.error_messages %>
-
-  <p>
-    <%= f.label :user_id %><br />
-    <%= f.text_field :user_id %>
-  </p>
-  <p>
-    <%= f.label :issue_id %><br />
-    <%= f.text_field :issue_id %>
-  </p>
-  <p>
-    <%= f.label :num_persone %><br />
-    <%= f.text_field :num_persone %>
-  </p>
-  <p>
-    <%= f.label :prezzo %><br />
-    <%= f.text_field :prezzo %>
-  </p>
-  <p>
-    <%= f.label :msg %><br />
-    <%= f.text_area :msg %>
-  </p>
-  <p>
-    <%= f.submit 'Create' %>
-  </p>
+<% labelled_form_for @reservation do |f| %>
+<%= render :partial => 'form', :locals => { :f => f } %>
+<p>
+  <%= f.submit l(:button_create) %>
+  <%= f.submit l(:button_create_and_continue), :name => 'continue' %>
+</p>
 <% end %>
-
-<%= link_to 'Back', reservations_path %>
